infra/k8s/client-react-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-react-srv
spec:
  type: NodePort
  selector:
    app: client-react
  ports:
  - name: client-react
    protocol: TCP
    port: 3000
    targetPort: 3000
